--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,12 @@
         "intervention/image": "^2.5",
         "laracasts/flash": "^3.2",
         "laravel/framework": "^7.24",
+        "laravel/horizon": "^4.0",
         "laravel/tinker": "^2.0",
         "mews/captcha": "^3.2",
         "mews/purifier": "^3.3",
-        "overtrue/laravel-lang": "^4.1"
+        "overtrue/laravel-lang": "^4.1",
+        "overtrue/laravel-pinyin": "~4.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
