--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "overtrue/laravel-pinyin": "~4.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.5",
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "laravel/ui": "^2.4",
