--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "mews/captcha": "^3.2",
         "mews/purifier": "^3.3",
         "overtrue/laravel-lang": "^4.1",
-        "overtrue/laravel-pinyin": "~4.0"
+        "overtrue/laravel-pinyin": "~4.0",
+        "spatie/laravel-permission": "^3.18"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
