--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "mews/purifier": "^3.3",
         "overtrue/laravel-lang": "^4.1",
         "overtrue/laravel-pinyin": "~4.0",
-        "spatie/laravel-permission": "^3.18"
+        "spatie/laravel-permission": "^3.18",
+        "viacreative/sudo-su": "^1.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
